--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
-  "name": "first-vue-app",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "dotenv": "^16.4.5",
-    "vue": "^3.4.37",
-    "vue-router": "^4.4.5"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^5.1.2",
-    "vite": "^5.4.1"
-  }
+    "name": "first-vue-app",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "homepage": "https://Uakaris.github.io/Vue.js-Movie-Database",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d dist"
+    },
+    "dependencies": {
+        "dotenv": "^16.4.5",
+        "vue": "^3.4.37",
+        "vue-router": "^4.4.5"
+    },
+    "devDependencies": {
+        "@vitejs/plugin-vue": "^5.1.4",
+        "gh-pages": "^6.1.1",
+        "vite": "^5.4.1"
+    }
 }
